Fixed social icons positioning on small screens

--- a/assets/sass/custom/_header.scss
+++ b/assets/sass/custom/_header.scss
@@ -198,11 +198,9 @@
 
 
 	body.home & {
-		width: 100%;
-		top: 240px;
+		top: 340px;
 
 		@include media-breakpoint-up(lg) {
-			width: 32px;
 			top: 35vh;
 		}
 	}
